--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,8 @@ mock = "1.13.3"
 turbine = "1.1.0"
 core-test = "2.2.0"
 jupiter = "5.9.3"
+material3WindowSizeClassAndroid = "1.3.1"
+adaptiveAndroid = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
@@ -72,6 +74,8 @@ mockk = { module = "io.mockk:mockk-android", version.ref = "mock" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 arch-core-test = { module = "androidx.arch.core:core-testing", version.ref = "core-test" }
 jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "jupiter" }
+androidx-material3-window-size = { group = "androidx.compose.material3", name = "material3-window-size-class-android", version.ref = "material3WindowSizeClassAndroid" }
+androidx-adaptive-android = { group = "androidx.compose.material3.adaptive", name = "adaptive-android", version.ref = "adaptiveAndroid" }
 
 
 
